remove the old random forest models, the tabular service and shap; version 1.4.0